client/src/styles/table-listing.css
.table-container {
    display: flex;
    justify-content: center;
}

.listing {
    font: 12px Exo-Medium;
    width: 100%;
    max-width: 1000px;
    table-layout: fixed;
}

.content-ellipsis {
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
    width: calc(100%);
}

.listing,
thead th,
tbody td {
    border: none;
    border-bottom: 1px solid rgb(100, 100, 100);
    border-collapse: collapse;
    background-color: rgba(36, 36, 36, 0.75);
    text-align: center;
    overflow: auto;
    padding: 5px;
}

.listing thead th {
    position: sticky;
    top: 0;
    z-index: 1;
    background-color: rgba(24, 24, 24);
}

.listing tbody td.assign-left {
    text-align: left;
}

.listing tbody td.clickable:hover {
    cursor: pointer;
}

.listing tbody td a {
    display: block;
}

.listing tbody tr:nth-child(even) {
    background-color: rgba(72, 72, 72, 0.75);
}

.listing tbody tr:hover {
    background-color: lightgray;
}

